Add images and begin content & styling

--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Damian Oriak Final Project</title>
-    <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/scipt.js"></script> 
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/scipt.js"></script> 
 </head>
 <body>
-    
+    <nav class="navigation wrapper">
+            <p class="navigation__container__text">
+                Damian Oriak | Fnal Project
+            </p>
+    </nav>
+
+    <main class="wrapper">
+        <section class="canvas">
+            <div class="hangman">
+
+            </div>
+            <div class="text">
+                test
+            </div>
+        </section>
+
+        <section class="keyboard" id="keyboard">
+            
+        </section>
+    </main>
+
+    <footer>
+        <p>COMP 2132 | 2025</p>
+    </footer>
+
 </body>
 </html>
