remove "open" in win dialog

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
             </div>
         </section>
-        <dialog id="win" open>
+        <dialog id="win">
             <div class="modal-content fade-in">
                 <h2>Congrats! You won!</h2>
                 <button class="try-again">Play Again</button>
